@@ -215,6 +215,44 @@ jack_control_run_method(
                 "jack_controller_load_internal failed for internal (%s)", internal_name);
         }
     }
+    else if (strcmp (call->method_name, "AddSlave") == 0)
+    {
+        const char *driver_name;
+
+        if (!jack_dbus_get_method_args(call, DBUS_TYPE_STRING, &driver_name, DBUS_TYPE_INVALID))
+        {
+            /* The method call had invalid arguments meaning that
+            * get_method_args() has constructed an error for us.
+            */
+            goto exit;
+        }
+        
+        if (!jack_controller_add_slave(controller_ptr, driver_name)) {
+            jack_dbus_error(
+                call,
+                JACK_DBUS_ERROR_GENERIC,
+                "jack_controller_add_slave failed for driver (%s)", driver_name);
+        }
+    }
+    else if (strcmp (call->method_name, "RemoveSlave") == 0)
+    {
+        const char *driver_name;
+
+        if (!jack_dbus_get_method_args(call, DBUS_TYPE_STRING, &driver_name, DBUS_TYPE_INVALID))
+        {
+            /* The method call had invalid arguments meaning that
+            * get_method_args() has constructed an error for us.
+            */
+            goto exit;
+        }
+        
+        if (!jack_controller_remove_slave(controller_ptr, driver_name)) {
+            jack_dbus_error(
+                call,
+                JACK_DBUS_ERROR_GENERIC,
+                "jack_controller_remove_slave failed for driver (%s)", driver_name);
+        }
+    }
     else if (strcmp (call->method_name, "UnloadInternal") == 0)
     {
         const char *internal_name;
@@ -234,6 +272,7 @@ jack_control_run_method(
                 "jack_controller_unload_internal failed for internal (%s)", internal_name);
         }
     }
+
     else
     {
         return false;
@@ -305,6 +344,14 @@ JACK_DBUS_METHOD_ARGUMENTS_BEGIN(UnlooadInternal)
     JACK_DBUS_METHOD_ARGUMENT("internal", "s", false)
 JACK_DBUS_METHOD_ARGUMENTS_END
 
+JACK_DBUS_METHOD_ARGUMENTS_BEGIN(AddSlave)
+    JACK_DBUS_METHOD_ARGUMENT("internal", "s", false)
+JACK_DBUS_METHOD_ARGUMENTS_END
+
+JACK_DBUS_METHOD_ARGUMENTS_BEGIN(RemoveSlave)
+    JACK_DBUS_METHOD_ARGUMENT("internal", "s", false)
+JACK_DBUS_METHOD_ARGUMENTS_END
+
 JACK_DBUS_METHODS_BEGIN
     JACK_DBUS_METHOD_DESCRIBE(IsStarted, NULL)
     JACK_DBUS_METHOD_DESCRIBE(StartServer, NULL)
@@ -320,6 +367,8 @@ JACK_DBUS_METHODS_BEGIN
     JACK_DBUS_METHOD_DESCRIBE(ResetXruns, NULL)
     JACK_DBUS_METHOD_DESCRIBE(LoadInternal, NULL)
     JACK_DBUS_METHOD_DESCRIBE(UnlooadInternal, NULL)
+    JACK_DBUS_METHOD_DESCRIBE(AddSlave, NULL)
+    JACK_DBUS_METHOD_DESCRIBE(RemoveSlave, NULL)
 JACK_DBUS_METHODS_END
 
 JACK_DBUS_SIGNAL_ARGUMENTS_BEGIN(ServerStarted)
